--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subneter App</title>
+    <title>Subnet Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,45 +11,70 @@
         <h1>Subneter App</h1>
         <div class="form-section">
             <label for="subnetInput">Enter Subnet (e.g., 10.228.128.0/17):</label>
-            <input type="text" id="subnetInput" placeholder="e.g., 10.228.128.0/17">
+            <input type="text" id="subnetInput" placeholder="Enter Subnet" />
             <button id="calculateBtn">Calculate</button>
         </div>
-
-        <h2>Subnet Details:</h2>
-        <table class="details-table">
-            <tr><td>IP Address:</td><td id="ipAddress"></td></tr>
-            <tr><td>Network Address:</td><td id="networkAddress"></td></tr>
-            <tr><td>Usable Host IP Range:</td><td id="usableRange"></td></tr>
-            <tr><td>Broadcast Address:</td><td id="broadcastAddress"></td></tr>
-            <tr><td>Number of Usable Hosts:</td><td id="usableHosts"></td></tr>
-            <tr><td>Subnet Mask:</td><td id="subnetMask"></td></tr>
-            <tr><td>Wildcard Mask:</td><td id="wildcardMask"></td></tr>
-            <tr><td>CIDR Notation:</td><td id="cidrNotation"></td></tr>
-        </table>
-
+        <div class="details-table">
+            <h2>Subnet Details:</h2>
+            <table class="details-table">
+                <tr>
+                    <td>IP Address:</td>
+                    <td id="ipAddress"></td>
+                </tr>
+                <tr>
+                    <td>Network Address:</td>
+                    <td id="networkAddress"></td>
+                </tr>
+                <tr>
+                    <td>Usable Host IP Range:</td>
+                    <td id="usableHostRange"></td>
+                </tr>
+                <tr>
+                    <td>Broadcast Address:</td>
+                    <td id="broadcastAddress"></td>
+                </tr>
+                <tr>
+                    <td>Number of Usable Hosts:</td>
+                    <td id="usableHosts"></td>
+                </tr>
+                <tr>
+                    <td>Subnet Mask:</td>
+                    <td id="subnetMask"></td>
+                </tr>
+                <tr>
+                    <td>Wildcard Mask:</td>
+                    <td id="wildcardMask"></td>
+                </tr>
+                <tr>
+                    <td>CIDR Notation:</td>
+                    <td id="cidrNotation"></td>
+                </tr>
+            </table>
+        </div>
         <hr>
-
         <div class="form-section">
-            <label for="reserveSubnetInput">Reserve a subnet:</label>
-            <input type="text" id="reserveSubnetInput" placeholder="e.g., 10.228.128.0/20">
+            <label for="reservedSubnetInput">Reserve a Subnet:</label>
+            <input type="text" id="reservedSubnetInput" placeholder="Enter Reserved Subnet" />
             <button id="addReservedBtn">Add</button>
         </div>
-
-        <h2>Free Subnets:</h2>
-        <table class="subnet-table">
-            <thead>
-                <tr>
-                    <th>Subnet</th>
-                    <th>Usable Host Range</th>
-                    <th>Available IPs</th>
-                    <th>Status</th>
-                    <th>Action</th>
-                </tr>
-            </thead>
-            <tbody id="subnetTableBody"></tbody>
-        </table>
+        <div>
+            <h2>Subnet Table:</h2>
+            <table class="subnet-table">
+                <thead>
+                    <tr>
+                        <th>Subnet</th>
+                        <th>Usable Host Range</th>
+                        <th>Available IPs</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="subnetTableBody">
+                </tbody>
+            </table>
+        </div>
+        <button id="reloadBtn">Reload</button>
     </div>
-
-    <script src="script.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
